# coursework2

./: .env.sample  README.md  pyproject.toml
data/: operations.xls
src/: decorators.py  log.txt  main.py  reports.py  services.py  utils.py  views.py
tests/: test_decorators.py  test_log.txt  test_reports.py  test_services.py  test_utils.py  test_views.py
